CompanyType,InsuranceCompany,PremiumLine and SystemFunction API Endpoints Inplementation

--- a/src/Resources/ApplicationMessages.resx
+++ b/src/Resources/ApplicationMessages.resx
@@ -465,4 +465,40 @@
   <data name="FailedToRetrieveContentFrequenciesMessage" xml:space="preserve">
     <value>Failed to retrieve content frequencies. See inner exception for details</value>
   </data>
+  <data name="CompanyTypeFindFailureMessage" xml:space="preserve">
+    <value>Company type find failure</value>
+  </data>
+  <data name="CompanyTypeNotFoundMessage" xml:space="preserve">
+    <value>Company type not found</value>
+  </data>
+  <data name="CompanyTypeRetrievalFailureByNameMessage" xml:space="preserve">
+    <value>Company type retrieval failure by name</value>
+  </data>
+  <data name="InsuranceCompanyFindFailureMessage" xml:space="preserve">
+    <value>Insurance company find failure</value>
+  </data>
+  <data name="InsuranceCompanyNotFoundMessage" xml:space="preserve">
+    <value>Insurance company not found</value>
+  </data>
+  <data name="InsuranceCompanyRetrievalFailureByNameMessage" xml:space="preserve">
+    <value>Insurance company retrieval failure by name</value>
+  </data>
+  <data name="PremiumLineFindFailureMessage" xml:space="preserve">
+    <value>Premium line find failure</value>
+  </data>
+  <data name="PremiumLineNotFoundMessage" xml:space="preserve">
+    <value>Premium Line not found</value>
+  </data>
+  <data name="PremiumLineRetrievalFailureByIdMessage" xml:space="preserve">
+    <value>Premium line retrieval failure by Id</value>
+  </data>
+  <data name="SystemFunctionFindFailureMessage" xml:space="preserve">
+    <value>System function find failure</value>
+  </data>
+  <data name="SystemFunctionNotFoundMessage" xml:space="preserve">
+    <value>System function not found</value>
+  </data>
+  <data name="SystemFunctionRetrievalFailureByNameMessage" xml:space="preserve">
+    <value>System function retrieval failure by name</value>
+  </data>
 </root>
